# FAIRDatabase

./: .dockerignore  .gitattributes  .gitignore  Adminstuff.py  CLAUDE.md  CLAUDE_EXAMPLE.md  DATABASE.md  Dockerfile  Knowledge base.txt  PHASE_6_SUMMARY.md  README.md  SUPABASE_ANALYSIS.md  SUPABASE_ASSESSMENT.md  SUPABASE_INTEGRATION_BASELINE.md  SUPABASE_INTEGRATION_GUIDE.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  app.py  del_sql.sql  docker-entrypoint.sh  package-lock.json  package.json  principles-md-file.md  readme.md  readtests.py  requirements.txt  uploadtests.py  visualisations_test.ipynb
.claude/agents/: archon-research-specialist.md  codebase-analyst.md  codebase-analyzer.md  deployment-strategist.md  devcontainer-architect.md  devops-orchestrator.md  devops-standards-advisor.md  docker-orchestrator.md  docs-writer.md  documentation-engineer.md  dora-analyst.md  fair-architect.md  fair-principles-advisor.md  gdpr-compliance.md  iac-engineer.md  implementation-tester.md  integration-coordinator.md  library-researcher.md  python-backend-expert.md  python-backend-pro.md  refactoring-specialist.md  supabase-architect.md  supabase-postgres-specialist.md  testing-guardian.md
.claude/commands/: docker-clean.md  execute-prp.md  generate-prp.md  git-workflow-guide.md  git.md  smart-commit.md
.devcontainer/: CLAUDE.md  README.md  devcontainer.json  post-create.sh  post-start.sh
.devcontainer/scripts/: mcp-setup.sh  post-create.sh  post-start.sh  postCreate.sh  postStart.sh  utils.sh  validate-setup.sh
.github/workflows/: claude-code-review.yml  claude.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  uv_usage_requirement.md  (+2 more)
backend/: .env  .env.example  .env.sample  CLAUDE.md  app.py  config.py  docker-compose.test.yml  docker-compose.yml  env.docker.example  migrate_schema.sql  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run_test.sh
backend/docs/: SCHEMA_MIGRATION.md
backend/edge-function-tests/: readme.md  test_aitchison.py  test_edge_function_output.py  test_security.py
backend/src/: exceptions.py  form_handler.py  types.py
backend/src/anonymization/: enforce_privacy.py  k_anonymity.py  normalized_entropy.py  p_29.py  t_closeness.py
backend/src/anonymization/checks/: validators.py
backend/src/anonymization/utils/: helpers.py
backend/src/auth/: decorators.py  form.py  mfa.py  routes.py
backend/src/dashboard/: helpers.py  routes.py
backend/src/data/: form.py  helpers.py  metadata_helpers.py  routes.py
backend/src/federated/: __init__.py  routes.py
backend/src/main/: routes.py
backend/src/privacy/: form.py  helpers.py  routes.py
backend/src/visualization/: helpers.py  routes.py
backend/tests/: .env.test  .env.test.example  conftest.py  test_form_handler.py
backend/tests/async_rpc/: __init__.py  test_async_rpc.py
backend/tests/auth/: test_authentication.py  test_decorators.py
backend/tests/config/: test_caching.py
backend/tests/dashboard/: test_dashboard.py  test_dashboard_helpers.py
backend/tests/data/: test_data.py  test_data_helpers.py
backend/tests/database/: __init__.py  test_connection_pooling.py
backend/tests/federated/: test_federated_routes.py
backend/tests/privacy/: test_privacy_helpers.py  test_privacy_routes.py
backend/tests/rls/: __init__.py  test_rls_policies.py
backend/tests/supabase/: test_sync_rpc.py
backend/tests/uploads/: .gitignore  .gitkeep
backend/uploads/: .gitignore
developer files/: converter_module.py  csv_1.py  csv_gen.py  developer_app.py  display_sample_table.html  edit_table.html  p29.py  plotmaker.py  upload.js  uploadtests.py
frontend/: CLAUDE.md
scripts/: bootstrap.sh  podman-setup.sh
static/: script.js  styles.css
supabase/: CLAUDE.md  config.toml
templates/: admin.html  build.html  change.html  dashboard.html  data_generalization.html  differential_privacy.html  display.html  documentation.html  federated_learning.html  layout.html  login.html  login_layout.html  logout.html  p29score.html  privacy_metrics.html  privacy_metrics_actual.html  privacy_processing.html  register.html  search.html  table_preview.html  update.html  upload.html
uploadfolder/: csv.csv  timer.csv
(+49 files in other folders)
