[project]
name = "fairdatabase"
version = "0.1.0"
description = "FAIRDatabase - Implementation of FAIR data principles for managing research data"
# readme = "README.md"  # Commented out until README is created
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "FAIRDatabase Team", email = "admin@fairdatabase.org" }
]
keywords = ["FAIR", "data", "research", "database", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "flask>=3.1.0",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.1",
    "flask-cors>=5.0.1",
    "flask-limiter>=3.12",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "ipython>=8.31.0",
    "ipdb>=0.13.13",
    "rich>=13.9.4",  # For better debugging output
    "httpx>=0.28.1",  # For testing HTTP clients
]

test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/seijispieker/FAIRDatabase"
Documentation = "https://github.com/seijispieker/FAIRDatabase/wiki"
Repository = "https://github.com/seijispieker/FAIRDatabase"
Issues = "https://github.com/seijispieker/FAIRDatabase/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "ipython>=8.31.0",
    "ipdb>=0.13.13",  # Latest stable version available
    "rich>=13.9.4",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "flask_cors",
    "flask_limiter",
    "supabase",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]